// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules/Select Custom valueComponent 1`] = `
.c0 {
  padding: 12px;
}

.c13 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c4 {
  position: relative;
}

.c11 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c24 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c29 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c30 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c31 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c32 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c33 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c34 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c35 .c10 {
  font-size: 1.5em;
}

.c36 .c10 {
  font-size: 1.5em;
}

.c37 .c10 {
  font-size: 1.5em;
}

.c38 .c10 {
  font-size: 1.5em;
}

.c39 .c10 {
  font-size: 1.5em;
}

.c40 .c10 {
  font-size: 1.5em;
}

.c41 .c10 {
  font-size: 1.5em;
}

.c42 .c10 {
  font-size: 1.5em;
}

.c43 .c10 {
  font-size: 1.5em;
}

.c44 .c10 {
  font-size: 1.5em;
}

.c45 .c10 {
  font-size: 1.5em;
}

.c46 .c10 {
  font-size: 1.5em;
}

.c47 .c10 {
  font-size: 1.5em;
}

.c48 .c10 {
  font-size: 1.5em;
}

.c49 .c10 {
  font-size: 1.5em;
}

.c50 .c10 {
  font-size: 1.5em;
}

.c51 .c10 {
  font-size: 1.5em;
}

.c52 .c10 {
  font-size: 1.5em;
}

.c3 {
  display: block;
}

.c2 {
  position: relative;
  width: 100%;
}

.c12 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c53 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c54 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c55 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c5 {
  position: relative;
}

.c5 .c10 {
  pointer-events: none;
}

.c56 .c10 {
  pointer-events: none;
}

.c21 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c21:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c21:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c21::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c21::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c21:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c21::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c21[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c7:hover {
  border: 1px solid #999;
}

.c7:focus {
  border: 1px solid #222;
}

.c7::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c23 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c23:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c23:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c23::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c23::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c23:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c23::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c23[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c22 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c22:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c22:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c22::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c22::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c22:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c22::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c22[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c18 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c18:hover {
  border: 1px solid #999;
}

.c18:focus {
  border: 1px solid #222;
}

.c18::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c18::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c18:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c18::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c18[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c20 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #4caf50;
  background-color: unset;
}

.c20:hover {
  border: 1px solid #999;
}

.c20:focus {
  border: 1px solid #222;
}

.c20::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c20::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c20:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c20::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c20[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c19 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #ef5350;
  background-color: unset;
}

.c19:hover {
  border: 1px solid #999;
}

.c19:focus {
  border: 1px solid #222;
}

.c19::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c19::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c19:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c19::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c19[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c15:hover,
.c15:focus {
  background-color: #eee;
}

.c16 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c6[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c14 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          data-test="adornment-wrapper"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <input
              className="c6 c7"
              disabled={true}
              onChange={[Function]}
              placeholder="Choose option"
              style={
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": "100%",
                }
              }
              type="text"
              value={null}
            />
          </div>
          <span
            className="c8"
            data-test="left-adornment"
          />
          <span
            className="c9"
            data-test="right-adornment"
          >
            <span
              className="c10 c11"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="c12"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c13"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c14"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          data-test="adornment-wrapper"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <input
              className="c6 c18"
              disabled={true}
              onChange={[Function]}
              placeholder="Choose option"
              style={
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": "100%",
                }
              }
              type="text"
              value={null}
            />
          </div>
          <span
            className="c8"
            data-test="left-adornment"
          />
          <span
            className="c9"
            data-test="right-adornment"
          >
            <span
              className="c10 c11"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="c12"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c13"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c14"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          data-test="adornment-wrapper"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <input
              className="c6 c19"
              disabled={true}
              onChange={[Function]}
              placeholder="Choose option"
              style={
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": "100%",
                }
              }
              type="text"
              value={null}
            />
          </div>
          <span
            className="c8"
            data-test="left-adornment"
          />
          <span
            className="c9"
            data-test="right-adornment"
          >
            <span
              className="c10 c11"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="c12"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c13"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c14"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          data-test="adornment-wrapper"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <input
              className="c6 c20"
              disabled={true}
              onChange={[Function]}
              placeholder="Choose option"
              style={
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": "100%",
                }
              }
              type="text"
              value={null}
            />
          </div>
          <span
            className="c8"
            data-test="left-adornment"
          />
          <span
            className="c9"
            data-test="right-adornment"
          >
            <span
              className="c10 c11"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="c12"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c13"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c14"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          data-test="adornment-wrapper"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <input
              className="c6 c21"
              disabled={true}
              onChange={[Function]}
              placeholder="Choose option"
              style={
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": "100%",
                }
              }
              type="text"
              value={null}
            />
          </div>
          <span
            className="c8"
            data-test="left-adornment"
          />
          <span
            className="c9"
            data-test="right-adornment"
          >
            <span
              className="c10 c11"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="c12"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c13"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c14"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          data-test="adornment-wrapper"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <input
              className="c6 c21"
              disabled={true}
              onChange={[Function]}
              placeholder="Choose option"
              style={
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": "100%",
                }
              }
              type="text"
              value={null}
            />
          </div>
          <span
            className="c8"
            data-test="left-adornment"
          />
          <span
            className="c9"
            data-test="right-adornment"
          >
            <span
              className="c10 c11"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="c12"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c13"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c14"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          data-test="adornment-wrapper"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <input
              className="c6 c22"
              disabled={true}
              onChange={[Function]}
              placeholder="Choose option"
              style={
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": "100%",
                }
              }
              type="text"
              value={null}
            />
          </div>
          <span
            className="c8"
            data-test="left-adornment"
          />
          <span
            className="c9"
            data-test="right-adornment"
          >
            <span
              className="c10 c11"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="c12"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c13"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c14"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          data-test="adornment-wrapper"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <input
              className="c6 c23"
              disabled={true}
              onChange={[Function]}
              placeholder="Choose option"
              style={
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": "100%",
                }
              }
              type="text"
              value={null}
            />
          </div>
          <span
            className="c8"
            data-test="left-adornment"
          />
          <span
            className="c9"
            data-test="right-adornment"
          >
            <span
              className="c10 c11"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="c12"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c13"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c14"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c15"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c16"
                    >
                      <div
                        className="c17"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select default 1`] = `
.c0 {
  padding: 12px;
}

.c12 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c3 {
  position: relative;
}

.c10 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c17 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c9 {
  font-size: 1.5em;
}

.c29 .c9 {
  font-size: 1.5em;
}

.c30 .c9 {
  font-size: 1.5em;
}

.c31 .c9 {
  font-size: 1.5em;
}

.c32 .c9 {
  font-size: 1.5em;
}

.c33 .c9 {
  font-size: 1.5em;
}

.c34 .c9 {
  font-size: 1.5em;
}

.c35 .c9 {
  font-size: 1.5em;
}

.c36 .c9 {
  font-size: 1.5em;
}

.c37 .c9 {
  font-size: 1.5em;
}

.c38 .c9 {
  font-size: 1.5em;
}

.c39 .c9 {
  font-size: 1.5em;
}

.c40 .c9 {
  font-size: 1.5em;
}

.c41 .c9 {
  font-size: 1.5em;
}

.c42 .c9 {
  font-size: 1.5em;
}

.c43 .c9 {
  font-size: 1.5em;
}

.c44 .c9 {
  font-size: 1.5em;
}

.c45 .c9 {
  font-size: 1.5em;
}

.c2 {
  display: block;
}

.c1 {
  position: relative;
  width: 100%;
}

.c11 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c46 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c47 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c48 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  position: relative;
}

.c4 .c9 {
  pointer-events: none;
}

.c49 .c9 {
  pointer-events: none;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c14:hover,
.c14:focus {
  background-color: #eee;
}

.c15 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c5[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c13 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            className="c5 c6"
            disabled={true}
            onChange={[Function]}
            placeholder="Choose option"
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value={null}
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c11"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c12"
        >
          <div
            onKeyDown={[Function]}
          >
            <div
              className="c13"
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": 120,
                  "overflow": "auto",
                  "position": "relative",
                  "width": "100%",
                  "willChange": "transform",
                }
              }
            >
              <ul
                style={
                  Object {
                    "height": 120,
                    "pointerEvents": "",
                    "width": "100%",
                  }
                }
              >
                <li
                  className="c14"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c15"
                  >
                    <div
                      className="c16"
                    >
                      one
                    </div>
                  </div>
                </li>
                <li
                  className="c14"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 30,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c15"
                  >
                    <div
                      className="c16"
                    >
                      two
                    </div>
                  </div>
                </li>
                <li
                  className="c14"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 60,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c15"
                  >
                    <div
                      className="c16"
                    >
                      three
                    </div>
                  </div>
                </li>
                <li
                  className="c14"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 90,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c15"
                  >
                    <div
                      className="c16"
                    >
                      four
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select onOutsideClick (dropdown) 1`] = `
.c0 {
  padding: 12px;
}

.c12 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c3 {
  position: relative;
}

.c10 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c17 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c9 {
  font-size: 1.5em;
}

.c29 .c9 {
  font-size: 1.5em;
}

.c30 .c9 {
  font-size: 1.5em;
}

.c31 .c9 {
  font-size: 1.5em;
}

.c32 .c9 {
  font-size: 1.5em;
}

.c33 .c9 {
  font-size: 1.5em;
}

.c34 .c9 {
  font-size: 1.5em;
}

.c35 .c9 {
  font-size: 1.5em;
}

.c36 .c9 {
  font-size: 1.5em;
}

.c37 .c9 {
  font-size: 1.5em;
}

.c38 .c9 {
  font-size: 1.5em;
}

.c39 .c9 {
  font-size: 1.5em;
}

.c40 .c9 {
  font-size: 1.5em;
}

.c41 .c9 {
  font-size: 1.5em;
}

.c42 .c9 {
  font-size: 1.5em;
}

.c43 .c9 {
  font-size: 1.5em;
}

.c44 .c9 {
  font-size: 1.5em;
}

.c45 .c9 {
  font-size: 1.5em;
}

.c2 {
  display: block;
}

.c1 {
  position: relative;
  width: 100%;
}

.c11 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c46 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c47 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c48 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  position: relative;
}

.c4 .c9 {
  pointer-events: none;
}

.c49 .c9 {
  pointer-events: none;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c14:hover,
.c14:focus {
  background-color: #eee;
}

.c15 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c5[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c13 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            className="c5 c6"
            disabled={true}
            onChange={[Function]}
            placeholder="Click on me or outside"
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value={null}
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c11"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c12"
        >
          <div
            onKeyDown={[Function]}
          >
            <div
              className="c13"
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": 30,
                  "overflow": "auto",
                  "position": "relative",
                  "width": "100%",
                  "willChange": "transform",
                }
              }
            >
              <ul
                style={
                  Object {
                    "height": 30,
                    "pointerEvents": "",
                    "width": "100%",
                  }
                }
              >
                <li
                  className="c14"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c15"
                  >
                    <div
                      className="c16"
                    >
                      click outside
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select useTriggerComponentWidth = false 1`] = `
.c0 {
  padding: 12px;
}

.c12 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c3 {
  position: relative;
}

.c10 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c17 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c9 {
  font-size: 1.5em;
}

.c29 .c9 {
  font-size: 1.5em;
}

.c30 .c9 {
  font-size: 1.5em;
}

.c31 .c9 {
  font-size: 1.5em;
}

.c32 .c9 {
  font-size: 1.5em;
}

.c33 .c9 {
  font-size: 1.5em;
}

.c34 .c9 {
  font-size: 1.5em;
}

.c35 .c9 {
  font-size: 1.5em;
}

.c36 .c9 {
  font-size: 1.5em;
}

.c37 .c9 {
  font-size: 1.5em;
}

.c38 .c9 {
  font-size: 1.5em;
}

.c39 .c9 {
  font-size: 1.5em;
}

.c40 .c9 {
  font-size: 1.5em;
}

.c41 .c9 {
  font-size: 1.5em;
}

.c42 .c9 {
  font-size: 1.5em;
}

.c43 .c9 {
  font-size: 1.5em;
}

.c44 .c9 {
  font-size: 1.5em;
}

.c45 .c9 {
  font-size: 1.5em;
}

.c2 {
  display: block;
}

.c1 {
  position: relative;
  width: 100%;
}

.c11 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c46 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c47 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c48 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  position: relative;
}

.c4 .c9 {
  pointer-events: none;
}

.c49 .c9 {
  pointer-events: none;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c14:hover,
.c14:focus {
  background-color: #eee;
}

.c15 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c5[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c13 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            className="c5 c6"
            disabled={true}
            onChange={[Function]}
            placeholder="Choose option"
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value={null}
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c11"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c12"
        >
          <div
            onKeyDown={[Function]}
          >
            <div
              className="c13"
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": 120,
                  "overflow": "auto",
                  "position": "relative",
                  "width": "100%",
                  "willChange": "transform",
                }
              }
            >
              <ul
                style={
                  Object {
                    "height": 120,
                    "pointerEvents": "",
                    "width": "100%",
                  }
                }
              >
                <li
                  className="c14"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c15"
                  >
                    <div
                      className="c16"
                    >
                      one
                    </div>
                  </div>
                </li>
                <li
                  className="c14"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 30,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c15"
                  >
                    <div
                      className="c16"
                    >
                      two
                    </div>
                  </div>
                </li>
                <li
                  className="c14"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 60,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c15"
                  >
                    <div
                      className="c16"
                    >
                      three
                    </div>
                  </div>
                </li>
                <li
                  className="c14"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 90,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c15"
                  >
                    <div
                      className="c16"
                    >
                      four
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
